Fix result display spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,9 +29,9 @@ body {
 .result {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-end;
-  padding: 0 0.5em 0.25em 0;
+  padding: 0 0.25em;
 }
 
 .result > span {
